[package]
name = "tmt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
axum = { version = "0.6.4", features = ["form", "tokio", "macros"] }
axum-template = { version = "1.0.0", features = ["handlebars"] }
chrono = { version = "0.4.23", features = ["serde"] }
dirs = "5.0.1"
handlebars = { version = "4.3.6", features = ["dir_source"] }
http = "0.2.8"
hyper = { version = "0.14.24", features = ["full"] }
local-ip-address = "0.5.1"
rusqlite = { version = "0.29.0", features = ["chrono", "url"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }
